Split test into nested classes
Signed-off-by: Hendrik Vennekate <Hendrik.Vennekate@tngtech.com>